apollo-federation/src/sources/connect/validation/snapshots/validation_tests@headers__expressions_that_evaluate_to_invalid_types.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/headers/expressions_that_evaluate_to_invalid_types.graphql
---
[
    Message {
        code: InvalidHeader,
        message: "In `@source(http.headers:)`: array values aren't valid here",
        locations: [
            11:42..11:53,
        ],
    },
    Message {
        code: InvalidHeader,
        message: "In `@source(http.headers:)`: object values aren't valid here",
        locations: [
            12:43..12:48,
        ],
    },
    Message {
        code: InvalidHeader,
        message: "In `@source(http.headers:)`: object values aren't valid here",
        locations: [
            13:73..13:73,
        ],
    },
    Message {
        code: InvalidHeader,
        message: "In `@connect(http.headers:)` on `Query.blah`: array values aren't valid here",
        locations: [
            21:67..21:80,
        ],
    },
]
