apollo-federation/src/sources/connect/validation/snapshots/validation_tests@headers__invalid_nested_paths_in_header_variables.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/headers/invalid_nested_paths_in_header_variables.graphql
---
[
    Message {
        code: InvalidHeader,
        message: "In `@connect(http.headers:)` on `Query.scalar`: `$args.scalar` doesn't have a field named `blah`",
        locations: [
            13:47..13:64,
        ],
    },
    Message {
        code: InvalidHeader,
        message: "In `@connect(http.headers:)` on `Query.object`: `InputObject` doesn't have a field named `fieldThatDoesntExist`",
        locations: [
            23:47..23:79,
        ],
    },
    Message {
        code: InvalidHeader,
        message: "In `@connect(http.headers:)` on `Query.enum`: `Enum` doesn't have a field named `cantHaveFields`",
        locations: [
            33:45..33:70,
        ],
    },
    Message {
        code: InvalidHeader,
        message: "In `@connect(http.headers:)` on `Object.newField`: `$this` doesn't have a field named `fieldThatDoesntExist`",
        locations: [
            47:47..47:73,
        ],
    },
]
